--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,3 +1,7 @@
 {
-  "hello": "Hello!"
+  "hello": "Hello!",
+  "staticView": {
+    "title": "This is static view",
+    "text": "Page prerendering example"
+  }
 }
